--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
@@ -4,11 +4,12 @@
 
 input {
     margin-left: 15px;
+    font-size: 20px;
 }
 
 .no-border {
     border: 0;
-    width: 240px;
+    width: 300px;
 }
 
 .btn-light {
@@ -17,7 +18,13 @@ input {
 }
 
 .input {
-    width: 450px;
+    width: 600px;
     margin-left: 0;
     margin-top: 7px;
+}
+
+.btn-main {
+    margin-left: 567px;
+    margin-top: 70px;
+    width: 180px;
 }
