Changed survey logic and added welcome message to the main page

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -35,4 +35,7 @@
     }
     <img src="/images/iTechArt_logo.png" class="logo"/>
 </div>
+<div class="center">
+    <p class="rounded border-dark text-lg-center">Welcome to iTechArt Surveys!</p>
+</div>
 </body>
