--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_ButtonToMainPagePartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_ButtonToMainPagePartial.cshtml
@@ -1,3 +1,3 @@
 ﻿<div class="center">
-    <a class="btn btn-warning rounded btn-main" asp-controller="Home" asp-action="Index">Back to main page</a>
+    <a class="btn btn-dark rounded btn-main" asp-controller="Home" asp-action="Index">Back to main page</a>
 </div>
