--- a/src/iTechArt.SurveysSite.WebApp/Views/Users/DisplayAllUsers.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Users/DisplayAllUsers.cshtml
@@ -46,5 +46,5 @@
             </tr>
         }
     </table>
-    <a class="btn btn-light rounded btn-main" asp-controller="Home" asp-action="Index">Back to main page</a>
+    <a class="btn btn-dark rounded btn-main" asp-controller="Home" asp-action="Index">Back to main page</a>
 </body>
