--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/NewSurvey.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/NewSurvey.cshtml
@@ -6,8 +6,8 @@
 <body>
     <form method="post" asp-action="NewSurvey">
         <div class="row">
-            <label asp-for="Name"></label>
-            <span><input class="input" type="text" asp-for="Name" /></span>
+            <label asp-for="Title"></label>
+            <span><input class="input" type="text" asp-for="Title" /></span>
         </div>
         <div class="row flex">
             <button class="btn btn-dark" type="submit">Save</button>
