Moved claims extensions to helpers folder, renamed two actions and moved buttons save and cancel

--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
@@ -13,7 +13,7 @@ input {
 }
 
 .btn-dark {
-    width: 100px;
+    width: 130px;
     margin: 20px 15px 35px 11px;
 }
 
@@ -27,4 +27,8 @@ input {
     margin-left: 567px;
     margin-top: 70px;
     width: 180px;
+}
+
+.border {
+    margin-top: 40px;
 }
