--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -16,10 +16,10 @@
         <div class="button-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a type="submit" class="btn btn-dark" asp-controller="Survey" asp-action="NewSurvey">New survey</a>
+                    <a type="submit" class="btn btn-dark" asp-controller="Survey" asp-action="CreateNewSurvey">New survey</a>
                 </li>
                 <li class="nav-item">
-                    <a type="submit" class="btn btn-dark" asp-controller="Survey" asp-action="MySurveys">My surveys</a>
+                    <a type="submit" class="btn btn-dark" asp-controller="Survey" asp-action="DisplayMySurveys">My surveys</a>
                 </li>
                 <li class="nav-item">
                     <a type="submit" class="btn btn-dark" asp-controller="SurveysTemplates" asp-action="Index">Surveys templates</a>
