Added task to controller

--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/DisplayMySurveys.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/DisplayMySurveys.cshtml
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/css/MySurveysStyles.css"/>
 </head>
 <body>
-<a class="btn btn-dark rounded btn-create" asp-action="NewSurvey">Create new survey</a>
+<a class="btn btn-dark rounded btn-create" asp-action="CreateNewSurvey">Create new survey</a>
 @if (Model.Count == 0)
 {
     <div class="center">
