Add redirection to main page after creating a survey

--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/CreateNewSurvey.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/CreateNewSurvey.cshtml
@@ -53,5 +53,9 @@
         window.onload = function() {
             alert("@ViewBag.Message");
         };
+        window.setTimeout(function() {
+                window.location.href = "/Home/Index";
+            },
+            2000);
     </script>
 }
