Removed unessecary using

--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/CreateNewSurvey.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/CreateNewSurvey.cshtml
@@ -1,5 +1,4 @@
-﻿@using iTechArt.SurveysSite.DomainModel
-@model iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel
+﻿@model iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel
 <head>
     <link rel="stylesheet" href="/css/NewSurveyStyles.css"/>
 </head>
