Add creating a survey (#11)
Add creating a survey #11

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -16,10 +16,10 @@
         <div class="button-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a type="submit" class="btn btn-dark" asp-controller="Survey" asp-action="NewSurvey">New survey</a>
+                    <a type="submit" class="btn btn-dark" asp-controller="Survey" asp-action="CreateNewSurvey">New survey</a>
                 </li>
                 <li class="nav-item">
-                    <a type="submit" class="btn btn-dark" asp-controller="Survey" asp-action="MySurveys">My surveys</a>
+                    <a type="submit" class="btn btn-dark" asp-controller="Survey" asp-action="DisplayMySurveys">My surveys</a>
                 </li>
                 <li class="nav-item">
                     <a type="submit" class="btn btn-dark" asp-controller="SurveysTemplates" asp-action="Index">Surveys templates</a>
@@ -34,5 +34,8 @@
         </div>
     }
     <img src="/images/iTechArt_logo.png" class="logo"/>
+</div>
+<div class="center">
+    <p class="rounded border-dark text-lg-center">Welcome to iTechArt Surveys!</p>
 </div>
 </body>
