Displaying all user surveys and deleting them (#12)
Displaying all user surveys and deleting them #12

--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/CreateNewSurvey.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/CreateNewSurvey.cshtml
@@ -5,8 +5,8 @@
 <body>
     <form method="post" asp-action="CreateNewSurvey">
         <div class="row">
-            <label asp-for="Name"></label>
-            <span><input class="input" type="text" asp-for="Name" /></span>
+            <label asp-for="Title"></label>
+            <span><input class="input" type="text" asp-for="Title" /></span>
         </div>
         <div class="border border-dark">
             <div class="row">
