--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/DisplayMySurveys.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/DisplayMySurveys.cshtml
@@ -1,12 +1,50 @@
-﻿<head>
-    <link rel="stylesheet" href="/css/PagesStyles.css"/>
+﻿@model List<iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel>
+<head>
+    <link rel="stylesheet" href="/css/MySurveysStyles.css" />
 </head>
-<div>
-    <partial name="_RobotImagePartial"/>
-    <div class="center">
-        <p class="text-dark text-lg-center rounded border border-primary bg-warning">
-            Your surveys would be located here. You have no surveys currently
-        </p>
-    </div>
-    <partial name="_ButtonToMainPagePartial"/>
-</div>
+<body>
+    <a class="btn btn-dark rounded btn-create" asp-action="CreateNewSurvey">Create new survey</a>
+    @if (Model.Count == 0)
+    {
+        <div class="center">
+            <p class="text-center"><b>You have no surveys currently</b></p>
+        </div>
+    }
+    else
+    {
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        Title
+                    </th>
+                    <th>
+                        Change date
+                    </th>
+                    <th>
+                        Actions
+                    </th>
+                </tr>
+            </thead>
+            @foreach (var survey in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => survey.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => survey.ChangeDate)
+                    </td>
+                    <td>
+                        <form method="post" asp-controller="Survey" asp-action="DeleteSurvey" asp-route-id="@survey.Id">
+                            <button type="submit" onclick="return confirm('Are you sure you want to delete survey \'@survey.Title\'?')">
+                                <img src="/images/trashbin.png" class="trash-image">
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </table>
+    }
+    <partial name="_ButtonToMainPagePartial" />
+</body>
