--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
@@ -32,3 +32,52 @@ input {
 .border {
     margin-top: 40px;
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    right: 0;
+    margin-top: 40px;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+.plus-button {
+    width: 40px;
+    float: right;
+}
+
+.inactive {
+    pointer-events: none;
+    cursor: default;
+}
+
+.input-question {
+    margin-left: 26px;
+}
