Redirect to my surveys page after saving changes

--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/UpdateSurvey.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/UpdateSurvey.cshtml
@@ -53,7 +53,7 @@
             alert("@ViewBag.Message");
         };
         window.setTimeout(function() {
-                window.location.href = "/Home/Index";
+                window.location.href = "/Survey/DisplayMySurveys";
             },
             2000);
     </script>
