--- a/src/iTechArt.SurveysSite.WebApp/Views/Register/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Register/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 <div class="simple-login-container">
     <h2>Register</h2>
-    <form method="post" asp-controller="Register" asp-action="Register">
+    <form method="post" asp-controller="Register" asp-action="Index">
         <div class="row">
             <div class="col-md-12 form-group">
                 <label asp-for="Login"></label>
