--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -17,10 +17,10 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="SignIn" asp-action="Login">Login</a>
+            <a class="nav-link text-dark" asp-controller="SignIn" asp-action="Index">Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Register" asp-action="Register">Register</a>
+            <a class="nav-link text-dark" asp-controller="Register" asp-action="Index">Register</a>
         </li>
     }
 </ul>
