--- a/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 <div class="simple-login-container">
     <h2>Login</h2>
-    <form method="post" asp-controller="SignIn" asp-action="Login">
+    <form method="post" asp-controller="SignIn" asp-action="Index">
         <div class="row">
             <div class="col-md-12 form-group">
                 <label asp-for="UserName"></label>
