--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/DisplayAll.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/DisplayAll.cshtml
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/css/MySurveysStyles.css" />
 </head>
 <body>
-<a class="btn btn-dark rounded btn-create" asp-action="CreateNewSurvey">Create new survey</a>
+<a class="btn btn-dark rounded btn-create" asp-action="Create">Create new survey</a>
 @if (Model.Count == 0)
 {
     <div class="center">
@@ -36,12 +36,12 @@ else
                     @Html.DisplayFor(modelItem => survey.ChangeDate)
                 </td>
                 <td class="d-flex flex-row">
-                    <form method="get" asp-action="UpdateSurvey" asp-route-id="@survey.Id">
+                    <form method="get" asp-action="Edit" asp-route-id="@survey.Id">
                         <button type="submit" class="edit-button">
                             <img src="/images/edit.png" class="trash-image">
                         </button>
                     </form>
-                    <form method="post" asp-action="DeleteSurvey" asp-route-id="@survey.Id">
+                    <form method="post" asp-action="Delete" asp-route-id="@survey.Id">
                         <button type="submit" onclick="return confirm('Are you sure you want to delete survey \'@survey.Title\'?')">
                             <img src="/images/trashbin.png" class="trash-image">
                         </button>
