Add updating survey and questions

--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/Create.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/Create.cshtml
@@ -4,7 +4,8 @@
 </head>
 <body>
     <form method="post" asp-action="Create">
-        <partial name="_CreateSurveyPartial" />
-        <partial name="_ButtonToMainPagePartial" />
+        <partial name="_SurveyTitlePartial"/>
+        <partial name="_AddQuestionPartial"/>
+        <partial name="_CreateSurveyPartial"/>
     </form>
 </body>
