--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/Edit.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/Edit.cshtml
@@ -4,7 +4,7 @@
 </head>
 <body>
     <form method="post" asp-action="Edit">
-        <partial name="_CreateSurveyPartial" />
-        <partial name="_ButtonToMainPagePartial" />
+        <partial name="_SurveyTitlePartial"/>
+        <partial name="_CreateSurveyPartial"/>
     </form>
 </body>
