--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/Create.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/Create.cshtml
@@ -1,4 +1,7 @@
 ﻿@model iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel
+@{
+    TempData["View"] = "Create";
+}
 <head>
     <link rel="stylesheet" href="/css/NewSurveyStyles.css"/>
 </head>
