--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_CreateSurveyPartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_CreateSurveyPartial.cshtml
@@ -3,46 +3,51 @@
 <div class="border border-dark">
     @for (var i = 0; i < Model.Questions.Count; ++i)
     {
-    <div class="row">
-        <label asp-for="Questions[i].Title" class="input-question"></label>
-        <input type="text" class="input input-question" asp-for="Questions[i].Title" />
-        <label asp-for="Questions[i].QuestionType" hidden="hidden"></label>
-        <input asp-for="Questions[i].QuestionType" hidden="hidden" value="@Model.Questions[i].QuestionType" />
-        <label asp-for="Questions[i].Id" hidden="hidden"></label>
-        <input asp-for="Questions[i].Id" hidden="hidden" value="@Model.Questions[i].Id" />
-        <span asp-validation-for="Questions[i].Title" class="input-question"></span>
-        @if (Model.Questions[i].QuestionType == QuestionType.Closed)
-        {
-            <ul>
-                <li>
-                    <input type="radio" name="Single" value="Choice 1" disabled="disabled" />
-                    <input type="text" class="no-border" value="Choice 1" readonly="readonly" />
-                </li>
-                <li>
-                    <input type="radio" name="Single" value="Choice 2" disabled="disabled" />
-                    <input type="text" class="no-border" value="Choice 2" readonly="readonly" />
-                </li>
-            </ul>
-        }
-        else
-        {
-            <ul>
-                <li>
-                    <input type="checkbox" value="Choice 1" disabled="disabled" />
-                    <input type="text" class="no-border" value="Choice 1" readonly="readonly" />
-                </li>
-                <li>
-                    <input type="checkbox" value="Choice 2" disabled="disabled" />
-                    <input type="text" class="no-border" value="Choice 2" readonly="readonly" />
-                </li>
-            </ul>
-        }
-    </div>
+        <div class="row">
+            <div class="flex flex-row">
+                <label asp-for="Questions[i].Title" class="input-question"></label>
+                <input type="text" class="input input-question" asp-for="Questions[i].Title" value="@Model.Questions[i].Title" />
+                <label asp-for="Questions[i].QuestionType" hidden="hidden"></label>
+                <input asp-for="Questions[i].QuestionType" hidden="hidden" value="@Model.Questions[i].QuestionType" />
+                <label asp-for="Questions[i].Id" hidden="hidden"></label>
+                <input asp-for="Questions[i].Id" hidden="hidden" value="@Model.Questions[i].Id"/>
+                <button class="no-background" type="submit" asp-action="RemoveQuestion" asp-route-index="@i">
+                    <img src="/images/minus.png" />
+                </button>
+            </div>
+            <span asp-validation-for="Questions[i].Title" class="input-question"></span>
+            @if (Model.Questions[i].QuestionType == QuestionType.Closed)
+            {
+                <ul>
+                    <li>
+                        <input class="input-question" type="radio" name="Single" value="Choice 1" disabled="disabled" />
+                        <input type="text" class="no-border" value="Choice 1" readonly="readonly" />
+                    </li>
+                    <li>
+                        <input class="input-question" type="radio" name="Single" value="Choice 2" disabled="disabled" />
+                        <input type="text" class="no-border" value="Choice 2" readonly="readonly" />
+                    </li>
+                </ul>
+            }
+            else
+            {
+                <ul>
+                    <li>
+                        <input class="input-question" type="checkbox" value="Choice 1" disabled="disabled" />
+                        <input type="text" class="no-border" value="Choice 1" readonly="readonly" />
+                    </li>
+                    <li>
+                        <input class="input-question" type="checkbox" value="Choice 2" disabled="disabled" />
+                        <input type="text" class="no-border" value="Choice 2" readonly="readonly" />
+                    </li>
+                </ul>
+            }
+        </div>
     }
 </div>
 <div class="row flex">
     <button class="btn btn-dark center" type="submit">Save</button>
-    <a class="btn btn-dark center" asp-controller="Home" asp-action="Index">Cancel</a>
+    <a class="btn btn-dark center" asp-controller="Home" asp-action="Index" onclick="return confirm('Do you want to discard survey?');">Cancel</a>
 </div>
 <partial name="_ButtonToMainPagePartial" />
 @if (!string.IsNullOrEmpty(ViewBag.Message))
