--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_SurveyTitlePartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_SurveyTitlePartial.cshtml
@@ -1,6 +1,8 @@
 ﻿@model iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel
-<div class="row">
+<div class="flex flex-row">
     <label asp-for="Title"></label>
-    <span><input class="input" type="text" asp-for="Title" /></span>
-    <span asp-validation-for="Title"></span>
+    <span><input class="input input-question" type="text" asp-for="Title" /></span>
+    <label asp-for="Id" hidden="hidden"></label>
+    <input asp-for="Id" value="@Model.Id" hidden="hidden"/>
 </div>
+<span asp-validation-for="Title"></span>
