Added validation on questions

--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_CreateSurveyPartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_CreateSurveyPartial.cshtml
@@ -1,5 +1,23 @@
 ﻿@using iTechArt.SurveysSite.DomainModel
 @model iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel
+<div class="flex flex-row">
+    <label asp-for="Title"></label>
+    <span><input class="input input-question" type="text" asp-for="Title" /></span>
+    <label asp-for="Id" hidden="hidden"></label>
+    <input asp-for="Id" value="@Model.Id" hidden="hidden" />
+</div>
+<span asp-validation-for="Title"></span>
+<div class="row">
+    <div class="dropdown">
+        <a class="inactive">
+            <img class="plus-button" src="/images/plus.png" />
+        </a>
+        <div class="dropdown-content">
+            <button class="btn btn-dark" type="submit" asp-action="AddQuestion" asp-route-type="closed">Closed question</button>
+            <button class="btn btn-dark" type="submit" asp-action="AddQuestion" asp-route-type="openEnded">Open ended question</button>
+        </div>
+    </div>
+</div>
 <div class="border border-dark">
     @for (var i = 0; i < Model.Questions.Count; ++i)
     {
@@ -10,7 +28,7 @@
                 <label asp-for="Questions[i].QuestionType" hidden="hidden"></label>
                 <input asp-for="Questions[i].QuestionType" hidden="hidden" value="@Model.Questions[i].QuestionType" />
                 <label asp-for="Questions[i].Id" hidden="hidden"></label>
-                <input asp-for="Questions[i].Id" hidden="hidden" value="@Model.Questions[i].Id"/>
+                <input asp-for="Questions[i].Id" hidden="hidden" value="@Model.Questions[i].Id" />
                 <button class="no-background" type="submit" asp-action="RemoveQuestion" asp-route-index="@i">
                     <img src="/images/minus.png" />
                 </button>
@@ -45,9 +63,10 @@
         </div>
     }
 </div>
+<span asp-validation-for="Questions"></span>
 <div class="row flex">
-    <button class="btn btn-dark center" type="submit">Save</button>
-    <a class="btn btn-dark center" asp-controller="Home" asp-action="Index" onclick="return confirm('Do you want to discard survey?');">Cancel</a>
+    <button class="btn btn-dark center save-cancel" type="submit">Save</button>
+    <a class="btn btn-dark center save-cancel" asp-controller="Survey" asp-action="DisplayAll" onclick="return confirm('Do you want to discard survey?');">Cancel</a>
 </div>
 <partial name="_ButtonToMainPagePartial" />
 @if (!string.IsNullOrEmpty(ViewBag.Message))
