--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
@@ -12,7 +12,7 @@ input {
     width: 300px;
 }
 
-.btn-dark {
+.save-cancel {
     width: 130px;
     margin: 20px 15px 35px 11px;
 }
@@ -49,11 +49,11 @@ input {
     z-index: 1;
 }
 
-.dropdown-content a {
-    color: black;
+.dropdown-content button {
     padding: 12px 16px;
-    text-decoration: none;
     display: block;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .dropdown-content a:hover {
@@ -62,10 +62,6 @@ input {
 
 .dropdown:hover .dropdown-content {
     display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
 }
 
 .plus-button {
