--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_CreateSurveyPartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_CreateSurveyPartial.cshtml
@@ -45,7 +45,7 @@
             alert("@ViewBag.Message");
         };
         window.setTimeout(function() {
-                window.location.href = "/Survey/DisplayAll";
+                window.location.href = "/Survey/Index";
             },
             2000);
     </script>
