--- a/src/iTechArt.SurveysSite.WebApp/Views/Users/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Users/Index.cshtml
@@ -36,7 +36,7 @@
                 <td>
                     @if (!user.RoleNames.Contains(RoleNames.AdminRole))
                     {
-                        <form method="post" asp-controller="Users" asp-action="DeleteUser" asp-route-id="@user.Id">
+                        <form method="post" asp-controller="Users" asp-action="Delete" asp-route-id="@user.Id">
                             <button type="submit" onclick="return confirm('Are you sure you want to delete user \'@user.Name\'?')">
                                 <img src="/images/trashbin.png" class="trash-image">
                             </button>
