--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/_CreateSurveyPartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/_CreateSurveyPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using iTechArt.SurveysSite.DomainModel
+@using iTechArt.SurveysSite.WebApp.ViewModels
 @model iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel
 <div class="flex flex-row">
     <label asp-for="Title"></label>
@@ -13,17 +14,39 @@
             <img class="plus-button" src="/images/plus.png" />
         </a>
         <div class="dropdown-content">
-            <button class="btn btn-dark" type="submit" asp-action="AddQuestion" asp-route-type="closed">Closed question</button>
-            <button class="btn btn-dark" type="submit" asp-action="AddQuestion" asp-route-type="openEnded">Open ended question</button>
+            <button class="btn btn-dark" type="button" onclick="addQuestion('closed')">Closed question</button>
+            <button class="btn btn-dark" type="button" onclick="addQuestion('openEnded')">Open ended question</button>
         </div>
     </div>
 </div>
-<div class="border border-dark">
-    @for (var i = 0; i < Model.Questions.Count; ++i)
+<div class="border border-dark" id="questions">
+    @for (var i = 0; i < Model.Questions.Count; i++)
     {
-        <partial name="_QuestionPartial" model="Model.Questions[i]"/>
+        @await Html.PartialAsync("_QuestionPartial", Model.Questions[i])
     }
 </div>
+<template id="closedTemplate">
+    <fieldset>
+        @{
+            var closedQuestion = new SurveyQuestionViewModel
+            {
+                QuestionType = QuestionType.Closed
+            };
+            @await Html.PartialAsync("_QuestionPartial", closedQuestion)
+        }
+    </fieldset>
+</template>
+<template id="openEndedTemplate">
+    <fieldset>
+        @{
+            var openEndedQuestion = new SurveyQuestionViewModel
+            {
+                QuestionType = QuestionType.OpenEnded
+            };
+            @await Html.PartialAsync("_QuestionPartial", openEndedQuestion)
+        }
+    </fieldset>
+</template>
 <span asp-validation-for="Questions"></span>
 <div class="row flex">
     <button class="btn btn-dark center save-cancel" type="submit">Save</button>
@@ -42,3 +65,16 @@
             2000);
     </script>
 }
+<script>
+    function addQuestion(type) {
+        var template;
+        if (type === 'closed') {
+            template = document.querySelector('#closedTemplate');
+        } else {
+            template = document.querySelector('#openEndedTemplate');
+        }
+        var div = document.querySelector('#questions');
+        var clone = template.content.cloneNode(true);
+        div.appendChild(clone);
+    }
+</script>
