--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial"/>
+                    <partial name="_Login"/>
                 </div>
             </div>
         </nav>
