--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/Edit.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/Edit.cshtml
@@ -1,12 +1,11 @@
-﻿@model iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel
+﻿@using iTechArt.SurveysSite.WebApp.Controllers
+@model iTechArt.SurveysSite.WebApp.ViewModels.SurveyViewModel
 @{
-    TempData["View"] = "Edit";
+    Model.Action = nameof(SurveyController.Edit);
 }
 <head>
     <link rel="stylesheet" href="/css/NewSurveyStyles.css" />
 </head>
 <body>
-    <form method="post" asp-action="Edit">
-        <partial name="_CreateSurveyPartial" />
-    </form>
+    <partial name="_SurveyManagement" />
 </body>
