--- a/src/iTechArt.SurveysSite.WebApp/Views/Users/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Users/Index.cshtml
@@ -46,5 +46,5 @@
             </tr>
         }
     </table>
-    <partial name="_ButtonToMainPagePartial"/>
+    <partial name="_ButtonToMainPage"/>
 </body>
