--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/Index.cshtml
@@ -3,53 +3,53 @@
     <link rel="stylesheet" href="/css/MySurveysStyles.css" />
 </head>
 <body>
-<a class="btn btn-dark rounded btn-create" asp-action="Create">Create new survey</a>
-@if (Model.Count == 0)
-{
-    <div class="center">
-        <p class="text-center"><b>You have no surveys currently</b></p>
-    </div>
-}
-else
-{
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th>
-                Title
-            </th>
-            <th>
-                Change date
-            </th>
-            <th>
-                Actions
-            </th>
-        </tr>
-        </thead>
-        @foreach (var survey in Model)
-        {
+    <a class="btn btn-dark rounded btn-create" asp-action="Create">Create new survey</a>
+    @if (Model.Count != 0)
+    {
+        <table class="table table-hover">
+            <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => survey.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => survey.ChangeDate)
-                </td>
-                <td class="d-flex flex-row">
-                    <form method="get" asp-action="Edit" asp-route-id="@survey.Id">
-                        <button type="submit" class="edit-button">
-                            <img src="/images/edit.png" class="trash-image">
-                        </button>
-                    </form>
-                    <form method="post" asp-action="Delete" asp-route-id="@survey.Id">
-                        <button type="submit" onclick="return confirm('Are you sure you want to delete survey \'@survey.Title\'?')">
-                            <img src="/images/trashbin.png" class="trash-image">
-                        </button>
-                    </form>
-                </td>
+                <th>
+                    Title
+                </th>
+                <th>
+                    Change date
+                </th>
+                <th>
+                    Actions
+                </th>
             </tr>
-        }
-    </table>
-}
-<partial name="_ButtonToMainPage"/>
+            </thead>
+            @foreach (var survey in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => survey.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => survey.ChangeDate)
+                    </td>
+                    <td class="d-flex flex-row">
+                        <form method="get" asp-action="Edit" asp-route-id="@survey.Id">
+                            <button type="submit" class="edit-button">
+                                <img src="/images/edit.png" class="trash-image">
+                            </button>
+                        </form>
+                        <form method="post" asp-action="Delete" asp-route-id="@survey.Id">
+                            <button type="submit" onclick="return confirm('Are you sure you want to delete survey \'@survey.Title\'?')">
+                                <img src="/images/trashbin.png" class="trash-image">
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </table>
+    }
+    else
+    {
+        <div class="center">
+            <p class="text-center"><b>You have no surveys currently</b></p>
+        </div>
+    }
+    <partial name="_ButtonToMainPage" />
 </body>
