--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/_Question.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/_Question.cshtml
@@ -1,14 +1,14 @@
 ﻿@using iTechArt.SurveysSite.DomainModel
 @model iTechArt.SurveysSite.WebApp.ViewModels.QuestionViewModel
 <div class="row">
-    <div class="flex flex-row">
+    <div id="question-div" class="flex flex-row">
         <label asp-for="QuestionTitle" class="input-question"></label>
-        <input type="text" class="input input-question" asp-for="QuestionTitle" value="@Model.QuestionTitle" />
+        <input id="question-title" type="text" class="input input-question" asp-for="QuestionTitle" value="@Model.QuestionTitle" required minlength="5" maxlength="50"/>
         <label asp-for="QuestionType" hidden="hidden"></label>
         <input asp-for="QuestionType" id="question-type" hidden="hidden" value="@Model.QuestionType" />
         <label asp-for="QuestionId" hidden="hidden"></label>
         <input asp-for="QuestionId" hidden="hidden" value="@Model.QuestionId" />
-        <button class="no-background" type="submit" onclick="removeQuestion(this.closest('fieldset'));">
+        <button class="no-background" type="submit" onclick="removeQuestion(event);">
             <img src="/images/minus.png" />
         </button>
         <div class="dropdown">
@@ -16,15 +16,14 @@
                 <img class="plus-button" src="/images/questionMenu.png" />
             </a>
             <div class="dropdown-content">
-                <button class="btn btn-dark" type="button" onclick="chooseType(this.closest('#question-type'), 1)">Closed question</button>
-                <button class="btn btn-dark" type="button" onclick="chooseType(this.closest('#question-type'), 2)">Open ended question</button>
+                <button class="btn btn-dark" type="button" onclick="chooseType(event, 1)">Closed question</button>
+                <button class="btn btn-dark" type="button" onclick="chooseType(event, 2)">Open ended question</button>
             </div>
         </div>
     </div>
-    <span asp-validation-for="QuestionTitle" class="input-title"></span>
-    @if (Model.QuestionType == QuestionType.Closed)
-    {
-        <ul>
+    <span id="error" asp-validation-for="QuestionTitle" class="input-title"></span>
+    <template id="closed">
+        <ul class="question">
             <li>
                 <input class="input-title" type="radio" name="Single" value="Choice 1" disabled="disabled" />
                 <input type="text" class="no-border" value="Choice 1" readonly="readonly" />
@@ -34,10 +33,9 @@
                 <input type="text" class="no-border" value="Choice 2" readonly="readonly" />
             </li>
         </ul>
-    }
-    else if (Model.QuestionType == QuestionType.OpenEnded)
-    {
-        <ul>
+    </template>
+    <template id="openEnded">
+        <ul class="question">
             <li>
                 <input class="input-title" type="checkbox" value="Choice 1" disabled="disabled" />
                 <input type="text" class="no-border" value="Choice 1" readonly="readonly" />
@@ -47,5 +45,6 @@
                 <input type="text" class="no-border" value="Choice 2" readonly="readonly" />
             </li>
         </ul>
-    }
+    </template>
 </div>
+<script src="/js/questionValidation.js"></script>
