--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
@@ -96,3 +96,8 @@ input {
     width: 30px;
     padding: 0;
 }
+
+input:invalid {
+    border: 2px solid #a52a2a;
+    box-shadow: inset 0 0 3px 3px red;
+}
